{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 38,
  "lineage": "d04ad5ab-e918-20eb-15b9-850c98891c40",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06efd0d656d59b575",
            "domain": "vpc",
            "id": "eipalloc-06efd0d656d59b575",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-163-126-226.compute-1.amazonaws.com",
            "public_ip": "54.163.126.226",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309285209113:internet-gateway/igw-033ef0d778d792672",
            "id": "igw-033ef0d778d792672",
            "owner_id": "309285209113",
            "tags": {
              "Name": "us-east-1-igw"
            },
            "tags_all": {
              "Name": "us-east-1-igw"
            },
            "vpc_id": "vpc-05f45f042f8b3108c"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06efd0d656d59b575",
            "connectivity_type": "public",
            "id": "nat-02c38df2f741dc8c4",
            "network_interface_id": "eni-0ef2f84b36ddba6c3",
            "private_ip": "192.168.13.71",
            "public_ip": "54.163.126.226",
            "subnet_id": "subnet-01f2b6a8589d26629",
            "tags": {
              "Name": "us-east-1-nwgw"
            },
            "tags_all": {
              "Name": "us-east-1-nwgw"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public_subnet",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a42b1091750077c31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02c38df2f741dc8c4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a42b1091750077c3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ngw",
            "aws_route_table.private_rt",
            "aws_subnet.public_subnet",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309285209113:route-table/rtb-0a42b1091750077c3",
            "id": "rtb-0a42b1091750077c3",
            "owner_id": "309285209113",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private-RT"
            },
            "tags_all": {
              "Name": "Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f45f042f8b3108c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309285209113:route-table/rtb-0f5734274c0bb30e1",
            "id": "rtb-0f5734274c0bb30e1",
            "owner_id": "309285209113",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-033ef0d778d792672",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f45f042f8b3108c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.name",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffdba226b66d1aab",
            "route_table_id": "rtb-0a42b1091750077c3",
            "subnet_id": "subnet-0631ad4ae9050f5a7"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0577153c164d59cbc",
            "route_table_id": "rtb-0a42b1091750077c3",
            "subnet_id": "subnet-037c08798379d54d0"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.name"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d113d8d06bfce8f5",
            "route_table_id": "rtb-0a42b1091750077c3",
            "subnet_id": "subnet-07a402378fa944a50"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a06271dfd84e620f",
            "route_table_id": "rtb-0a42b1091750077c3",
            "subnet_id": "subnet-06deaab1b0d556c61"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078dbe95ce411684d",
            "route_table_id": "rtb-0a42b1091750077c3",
            "subnet_id": "subnet-090e1a226f929cf85"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e19fb8c78da2fda9",
            "route_table_id": "rtb-0a42b1091750077c3",
            "subnet_id": "subnet-0789a095c2fb31727"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1348716138a7759",
            "route_table_id": "rtb-0f5734274c0bb30e1",
            "subnet_id": "subnet-01f2b6a8589d26629"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01edb612bcf00f8b2",
            "route_table_id": "rtb-0f5734274c0bb30e1",
            "subnet_id": "subnet-0f2073241ddb1b0c8"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.name",
            "data.aws_availability_zones.name",
            "aws_internet_gateway.igw"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01204ab017385bc5c",
            "route_table_id": "rtb-0f5734274c0bb30e1",
            "subnet_id": "subnet-0dfe4fc1ad38a1744"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09042f683ea758c22",
            "route_table_id": "rtb-0f5734274c0bb30e1",
            "subnet_id": "subnet-099c4940380923e47"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.name",
            "data.aws_availability_zones.name",
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05989adfc67f849a1",
            "route_table_id": "rtb-0f5734274c0bb30e1",
            "subnet_id": "subnet-0c730360b6e77c88c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0657f6a413115358f",
            "route_table_id": "rtb-0f5734274c0bb30e1",
            "subnet_id": "subnet-077ce2627f683b361"
          },
          "dependencies": [
            "aws_vpc.name",
            "data.aws_availability_zones.name",
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309285209113:subnet/subnet-0631ad4ae9050f5a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.96.0/20",
            "id": "subnet-0631ad4ae9050f5a7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309285209113",
            "tags": {
              "Name": "Private-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "Private-Subnet-us-east-1a"
            },
            "vpc_id": "vpc-05f45f042f8b3108c"
          },
          "dependencies": [
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309285209113:subnet/subnet-037c08798379d54d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.112.0/20",
            "id": "subnet-037c08798379d54d0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309285209113",
            "tags": {
              "Name": "Private-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "Private-Subnet-us-east-1b"
            },
            "vpc_id": "vpc-05f45f042f8b3108c"
          },
          "dependencies": [
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309285209113:subnet/subnet-07a402378fa944a50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.128.0/20",
            "id": "subnet-07a402378fa944a50",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309285209113",
            "tags": {
              "Name": "Private-Subnet-us-east-1c"
            },
            "tags_all": {
              "Name": "Private-Subnet-us-east-1c"
            },
            "vpc_id": "vpc-05f45f042f8b3108c"
          },
          "dependencies": [
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309285209113:subnet/subnet-06deaab1b0d556c61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.144.0/20",
            "id": "subnet-06deaab1b0d556c61",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309285209113",
            "tags": {
              "Name": "Private-Subnet-us-east-1d"
            },
            "tags_all": {
              "Name": "Private-Subnet-us-east-1d"
            },
            "vpc_id": "vpc-05f45f042f8b3108c"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "aws_vpc.name"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309285209113:subnet/subnet-090e1a226f929cf85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.168.160.0/20",
            "id": "subnet-090e1a226f929cf85",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309285209113",
            "tags": {
              "Name": "Private-Subnet-us-east-1e"
            },
            "tags_all": {
              "Name": "Private-Subnet-us-east-1e"
            },
            "vpc_id": "vpc-05f45f042f8b3108c"
          },
          "dependencies": [
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309285209113:subnet/subnet-0789a095c2fb31727",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "192.168.176.0/20",
            "id": "subnet-0789a095c2fb31727",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309285209113",
            "tags": {
              "Name": "Private-Subnet-us-east-1f"
            },
            "tags_all": {
              "Name": "Private-Subnet-us-east-1f"
            },
            "vpc_id": "vpc-05f45f042f8b3108c"
          },
          "dependencies": [
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309285209113:subnet/subnet-01f2b6a8589d26629",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/20",
            "id": "subnet-01f2b6a8589d26629",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309285209113",
            "tags": {
              "Name": "Public-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "Public-Subnet-us-east-1a"
            },
            "vpc_id": "vpc-05f45f042f8b3108c"
          },
          "dependencies": [
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309285209113:subnet/subnet-0f2073241ddb1b0c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.16.0/20",
            "id": "subnet-0f2073241ddb1b0c8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309285209113",
            "tags": {
              "Name": "Public-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "Public-Subnet-us-east-1b"
            },
            "vpc_id": "vpc-05f45f042f8b3108c"
          },
          "dependencies": [
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309285209113:subnet/subnet-0dfe4fc1ad38a1744",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.32.0/20",
            "id": "subnet-0dfe4fc1ad38a1744",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309285209113",
            "tags": {
              "Name": "Public-Subnet-us-east-1c"
            },
            "tags_all": {
              "Name": "Public-Subnet-us-east-1c"
            },
            "vpc_id": "vpc-05f45f042f8b3108c"
          },
          "dependencies": [
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309285209113:subnet/subnet-099c4940380923e47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.48.0/20",
            "id": "subnet-099c4940380923e47",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309285209113",
            "tags": {
              "Name": "Public-Subnet-us-east-1d"
            },
            "tags_all": {
              "Name": "Public-Subnet-us-east-1d"
            },
            "vpc_id": "vpc-05f45f042f8b3108c"
          },
          "dependencies": [
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309285209113:subnet/subnet-0c730360b6e77c88c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.168.64.0/20",
            "id": "subnet-0c730360b6e77c88c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309285209113",
            "tags": {
              "Name": "Public-Subnet-us-east-1e"
            },
            "tags_all": {
              "Name": "Public-Subnet-us-east-1e"
            },
            "vpc_id": "vpc-05f45f042f8b3108c"
          },
          "dependencies": [
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309285209113:subnet/subnet-077ce2627f683b361",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "192.168.80.0/20",
            "id": "subnet-077ce2627f683b361",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309285209113",
            "tags": {
              "Name": "Public-Subnet-us-east-1f"
            },
            "tags_all": {
              "Name": "Public-Subnet-us-east-1f"
            },
            "vpc_id": "vpc-05f45f042f8b3108c"
          },
          "dependencies": [
            "aws_vpc.name",
            "data.aws_availability_zones.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:309285209113:vpc/vpc-05f45f042f8b3108c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-04e2ced364e9ccf3b",
            "default_route_table_id": "rtb-00284cd1e54b45956",
            "default_security_group_id": "sg-0c84b50436648c1c1",
            "dhcp_options_id": "dopt-d6497bac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05f45f042f8b3108c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00284cd1e54b45956",
            "owner_id": "309285209113",
            "tags": {
              "Name": "us-east-1-vpc"
            },
            "tags_all": {
              "Name": "us-east-1-vpc"
            }
          }
        }
      ]
    }
  ]
}